# FastAPI_app

./: .env  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
migrations/: env.py
migrations/versions/: 220239164755_init.py  464840c93300_update.py  d31f2aa83086_init.py  e51b192d2b4d_init.py
postgres-data/base/13458/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16398  16401  16403  16411  16419  16420  16422  16425  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  (+3 more)
postgres-data/global/: 1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13458.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: config.ini  connect.py  db.py  models.py  seed.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: email_template.html
tests/: confest.py  test_main.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
